--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=B612+Mono&family=Roboto+Mono&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap");
 
 html,
 body {
@@ -30,5 +29,9 @@ img {
 
 .mono {
   font-family: "B612 Mono", "Courier New", Courier, monospace;
+  line-height: 1.7;
+}
+.roboto-mono {
+  font-family: "Roboto Mono", "Courier New", Courier, monospace;
   line-height: 1.7;
 }
